--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
             - run: tar --help
             - run: |
                 cd repo
-                tar cfvz --exclude='**/.git/*' ../python-heroku-v${{ github.run_number}}.tar.gz . 
+                tar cfvz ../python-heroku-v${{ github.run_number}}.tar.gz . --exclude=.git
                 cd ..
                 ls
             - name: Create GitHub Release
