--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,6 +42,6 @@ jobs:
             - name: Upload asset to GitHub Release
               uses: softprops/action-gh-release@v1
               with:
-                files: python-heroku-v-v${{ github.run_number}}.tar.gz
+                files: python-heroku-v${{ github.run_number}}.tar.gz
                 tag_name: v${{ github.run_number}}
         
