--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
             - run: tar --help
             - run: |
                 cd repo
-                tar cvz --exclude-vcs --exclude:python-3-11-1.tar.gz -f ../python-heroku-v${{ github.run_number}}.tar.gz . 
+                tar cvz --exclude-vcs --exclude=python-3-11-1.tar.gz -f ../python-heroku-v${{ github.run_number}}.tar.gz . 
                 cd ..
                 ls
             - name: Create GitHub Release
