--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
               with:
                 repository: 'NicoAs/heroku-buildpack-python'
                 path: 'repo/target'
-            - run: ls -l repo
+            - run: ls -al repo
             - run: tar --help
             - run: |
                 cd repo
